--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   firebase_messaging: ^14.9.3
   firebase_core: ^2.31.1
   flutter_pdfview: ^1.2.7
-  google_maps_flutter: ^2.6.1
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
